# csg-sha256

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  register_runner.cmake  run.sh
benchmark/src/: main.cpp  main.hpp
src/: main.cpp  main.hpp
